# legacy-projects

./: .gitignore  CLAUDE.md  pyproject.toml  ruff.toml
.github/: copilot-instructions.md
artifacts/: artifacts.md  capability_defs.json  capability_graph.json  doc_db.json  help_entries.json  signature_map.json
best-practices/: PATTERNS.md  PYDANTIC.md  SQLMODEL.md
classify_fns/: .gitignore  build_capability_graph.py  capability_classify.ipynb  cluster_review.md  file_to_systems.json  main.py  pyproject.toml
classify_fns/clustering/: cluster_integration.py  doxygen_graph.py  doxygen_parse.py  llm_refiner.py  semantic_clustering.py  subsystem_discovery.ipynb  subsystem_documenter.py  subsystem_identifier.py
context/: files_docs.md  files_old.md
doc_gen/: .gitignore
docs/: best_practices.md  doc_gen_checklist.md  doc_gen_loop.prompt.md  mud_system_architecture_final.md  subsystems.md  summary_headers_batch_misc.md  (+12 more)
mcp/doc_server/: .env  .env.example  .gitignore  DESIGN.md  INSTALL.md  PRD.md  README.md  ROADMAP.md  build_mcp_db.py  docker-compose.yml  eval_queries.json  model_eval.py  pyproject.toml  rebuild_database.sh  ruff.toml  speculative_agent_reqs.md  test_database.py  test_db.py  v2_indexing.md
mcp/doc_server/build_helpers/: __init__.py  artifact_models.py  embed_text.py  embeddings_loader.py  entity_ids.py  entity_processor.py  graph_loader.py  loaders.py
mcp/doc_server/server/: __init__.py  app.py  config.py  converters.py  cross_encoder.py  db.py  db_models.py  embedding.py  enums.py  errors.py  graph.py  lifespan.py  logging_config.py  models.py  prompts.py  resolver.py  resources.py  retrieval_view.py  search.py  server.py  util.py
mcp/doc_server/server/tools/: __init__.py  behavior.py  capability.py  entity.py  explain.py  graph.py  search.py
mcp/doc_server/specs/: design.005.md
mcp/doc_server/specs/001-mcp-doc-server/: plan.md  quickstart.md
mcp/doc_server/specs/001-mcp-doc-server/checklists/: requirements.md
mcp/doc_server/specs/001-mcp-doc-server/contracts/: prompts.md  resources.md  tools.md
mcp/doc_server/specs/002-mcp-doc-server-v2/: draft_plan.md
mcp/doc_server/specs/003-fix-mcp-db-build/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
mcp/doc_server/specs/004-local-fastembed-provider/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
mcp/doc_server/specs/v1/: MODEL.md  PRD.md  data-model.md  gaps.A.md  gaps.B.md  gaps.C.md  gaps.md  search_performance.md  spec.md
mcp/doc_server/specs/v1/001-mcp-doc-server/: plan.md  quickstart.md  research.md  spec.md  tasks.md
mcp/doc_server/specs/v1/003-fix-mcp-db-build/: plan.md  quickstart.md  research.md  tasks.md
mcp/doc_server/specs/v1/003-fix-mcp-db-build/checklists/: requirements.md
mcp/doc_server/specs/v1/004-local-fastembed-provider/: design.md  plan.md  quickstart.md  tasks.md
mcp/doc_server/specs/v1/004-local-fastembed-provider/checklists/: requirements.md
mcp/doc_server/specs/v1/004-local-fastembed-provider/contracts/: embedding-provider.md
mcp/doc_server/specs/v1/005-mcp-key-issue/: evaluation.md  plan.md  tasks.md
mcp/doc_server/specs/v1/005-mcp-key-issue/checklists/: requirements.md
mcp/doc_server/specs/v1/contracts/: embedding-provider.md  prompts.md  resources.md  tools.md
mcp/doc_server/specs/v2/: DESIGN_v2.md  spec.md  v2_indexing.md
mcp/doc_server/specs/v2/002-mcp-doc-server-v2/: draft_plan.md  spec.md
mcp/doc_server/specs/v2/002-mcp-doc-server-v2/checklists/: requirements.md
mcp/doc_server/test_integration/: integration_test_phase678.py  smoke_test.py  test_mcp_protocol.py  test_server_smoke.py
mcp/doc_server/tests/: conftest.py  test_behavior_tools.py  test_build.py  test_capability_tools.py  test_config.py  test_converters.py  test_embed_text.py  test_embedding_provider.py  test_embeddings.py  test_entity_ids.py  test_entity_processor.py  test_entity_tools.py  test_errors.py  test_explain_interface.py  test_graph.py  test_graph_tools.py  test_load_graph.py  test_prompts.py  test_resolution.py  test_resolver_stages.py  test_resources.py  test_search.py  test_search_conceptual.py  test_search_entity_end_to_end.py  test_search_qualified_name.py  test_search_reranking.py  test_search_symbol_lookup.py  test_search_tool.py  test_search_units.py  test_server.py  test_tools.py  test_util.py
projects/classify_fns/: .gitignore  GROUPS.md  build_capability_graph.py  cap_probe.py  capability_classifications.json  capability_classify.ipynb  capability_graph.json  chunk_review.md  classify.ipynb  pyproject.toml  regen_embeddings.py
projects/classify_fns/notebooks/: subsystem_discovery.ipynb  subsystem_identification.ipynb
projects/doc_gen/: .gitignore  README.md  build_signature_map.py  change_log.md  component_doc_checklist.md  pyproject.toml
projects/doc_gen/context/: example_compound.json
projects/doc_gen/context/internal/: forward_pass_schedule.json  integrated_clusters.json  leiden_communities.json  refined_clusters.json  subsystems.json
projects/doc_gen/doc_gen/: gen_common.py
projects/doc_gen/docs/: high_level_component_discovery_progress.md  structural_clustering_report.md
projects/doc_gen/notebooks/: code_graph.ipynb  docgen_backward.ipynb  docgen_backward_refine.ipynb  docgen_cluster.ipynb  docgen_forward.ipynb  docgen_forward_refine.ipynb  explore_xml.ipynb  subsystem_discovery.ipynb  subsystem_discovery.old.ipynb  subsystem_phase_2.ipynb  subsystem_visualization.ipynb
projects/doc_gen/templates/: docgen_fw_refine_class.j2  docgen_fw_refine_group.j2  docgen_fw_refine_variable.j2
(+750 files in other folders)
