[project]
name = "legacy-projects"
version = "0.1.0"
description = "Auxiliary tools for legacy MUD migration"
requires-python = ">=3.14"
dependencies = [
    "legacy-common",
    "doc-gen",
    "classify-fns",
    "legacy-mcp-doc-server",
]

[tool.uv.sources]
legacy-common = { workspace = true }
doc-gen = { workspace = true }
classify-fns = { workspace = true }
legacy-mcp-doc-server = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/*",
    "projects/*",
    "mcp/*",
]
