[project]
name = "gen-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.29",
    "jinja2>=3.1.6",
    "jupyter>=1.1",
    "leidenalg>=0.11.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "openai>=2.26.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "scikit-optimize>=0.10.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
