[project]
name = "classify-fns"
version = "0.1.0"
description = "Capability graph extraction and chunk planning for legacy MUD migration"
requires-python = ">=3.14"
dependencies = [
    "legacy-common",
    "fastembed>=0.6",
    "networkx>=3.0",
    "numpy>=2.0",
    "scikit-learn>=1.6",
]

[tool.uv.sources]
legacy-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["classify_fns"]
